.ide/allinone/base/k8s-deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: boathouse-calculator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      boathouse-calculator.service: boathouse-calculator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        boathouse-calculator.service: boathouse-calculator
    spec:
      containers:
        - env:
            - name: LOCAL_USER_PASSWORD
              value: root123
            - name: ROOT_PASSWORD
              value: root123
          image: registry.cn-hangzhou.aliyuncs.com/smartide/smartide-base-v2:latest
          imagePullPolicy: Always
          name: boathouse-calculator-dev
          # command: ["/bin/bash", "-ce", "tail -f /dev/null"]
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: boathouse-calculator-service
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
    - name: "6800"
      port: 6800
      targetPort: 3000
    - name: "6822"
      port: 6822
      targetPort: 22
  selector:
    boathouse-calculator.service: boathouse-calculator
status:
  loadBalancer: {}

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: boathouse-calculator-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              boathouse-calculator/smartide-network: "true"
  podSelector:
    matchLabels:
      boathouse-calculator/smartide-network: "true"
